Fix how Range collects nodes for getClientRects/getBoundingClientRect

Range::GetBorderAndTextQuads() should collect quads for every element
such that:
- the element is fully contained in the range by itself
- but its parent is not fully contained

The existing implementation fails the job in the way that, an element
partially in the range can be considered fully in the range, blocking
its descendants from being collected.

This patch fixes the bug.

Bug: 681536
Change-Id: I66173a96d289eb2e3298547bea28e3d2e3d5f439